infra/k8s/ingress-nginx-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-demo
  namespace: ingress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-demo
  template:
    metadata:
      labels:
        app: hello-demo
    spec:
      containers:
        - name: hello
          image: nginxdemos/hello:plain-text
          ports:
            - containerPort: 80
