infra/k8s/ingress-nginx-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-demo
  namespace: ingress-demo
spec:
  selector:
    app: hello-demo
  ports:
    - port: 80
      targetPort: 80
